[package]
name = "bells_parser"
description = "A very fast Bellscoin Core block parser and iterator built on top of bellscoin-rust"
keywords = ["bellscoin", "block", "iterator"]
categories = ["cryptography::cryptocurrencies", "encoding"]
edition = "2024"
version = "0.0.1"
license = "MIT"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_deref = "1.1.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
zerocopy = { version = "0.8.24", features = ["derive"] }
bitcoin_hashes = { version = "0.16.0" }


bellscoin = { version = "0.31.0" }
bellscoincore-rpc = { version = "0.18.0" }

